components/evaluator/tests/compile-fail/reference_error.rs
// error-pattern:Reference error

a();